[package]
name = "codehub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
log = "0.4.19"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
sea-orm = { version = "0.12.2", features = ["sqlx-mysql", "runtime-tokio-rustls", "debug-print", "with-json", "with-time", "macros", "with-chrono"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics" ] }
validator = "0.16.1"
validator_derive = "0.16.0"
